--- a/resume.html
+++ b/resume.html
@@ -82,81 +82,6 @@
             </div>
         </section>
 
-        <!-- Stats Section -->
-        <!--<section class="stats container">
-            <div class="stat-item">
-                <h2 class="stat-number">80+</h2>
-                <p class="stat-text">Satisfied clients</p>
-            </div>
-            <div class="stat-item">
-                <h2 class="stat-number">200+</h2>
-                <p class="stat-text">Projects completed</p>
-            </div>
-            <div class="stat-item">
-                <h2 class="stat-number">99+</h2>
-                <p class="stat-text">Reviews given</p>
-            </div>
-        </section>-->
-
-        <!-- Skills Section -->
-        <!-- <section id="skills" class="skills container">
-            <div class="section-header">
-                <div class="badge">My Skills</div>
-                <h2 class="section-title">Why Hire Me For Your Next Project?</h2>
-                <p class="section-text">
-                    I've spent years developing skills that allow me to build solutions for evolving problems through
-                    user experience and research.
-                </p>
-                <button class="btn btn-primary">
-                    <span>👋</span> Hire Me
-                </button>
-            </div>
-
-            <div class="skills-grid">
-                <div class="skill-card">
-                    <div class="skill-icon">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                            stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M12 2L2 7L12 12L22 7L12 2Z"></path>
-                            <path d="M2 17L12 22L22 17"></path>
-                            <path d="M2 12L12 17L22 12"></path>
-                        </svg>
-                    </div>
-                    <h3 class="skill-title">Visual Design</h3>
-                    <p class="skill-text">Create user interface design with unique & modern style</p>
-                </div>
-                <div class="skill-card">
-                    <div class="skill-icon">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                            stroke-linecap="round" stroke-linejoin="round">
-                            <path
-                                d="M14 2H6C5.46957 2 4.96086 2.21071 4.58579 2.58579C4.21071 2.96086 4 3.46957 4 4V20C4 20.5304 4.21071 21.0391 4.58579 21.4142C4.96086 21.7893 5.46957 22 6 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V8L14 2Z">
-                            </path>
-                            <path d="M14 2V8H20"></path>
-                            <path d="M16 13H8"></path>
-                            <path d="M16 17H8"></path>
-                            <path d="M10 9H9H8"></path>
-                        </svg>
-                    </div>
-                    <h3 class="skill-title">UX Research</h3>
-                    <p class="skill-text">Create digital user interface with validated ideas</p>
-                </div>
-                <div class="skill-card">
-                    <div class="skill-icon">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                            stroke-linecap="round" stroke-linejoin="round">
-                            <path
-                                d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z">
-                            </path>
-                            <path d="M12 16V12"></path>
-                            <path d="M12 8H12.01"></path>
-                        </svg>
-                    </div>
-                    <h3 class="skill-title">Design Prototype</h3>
-                    <p class="skill-text">Create interactive design with high-fidelity</p>
-                </div>
-            </div>
-        </section>-->
         <!-- Timeline Section -->
         <section class="timeline container">
             <div class="section-header">
@@ -173,13 +98,17 @@
                 <div class="timeline-item left">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2020 - Present</div>
-                        <h3 class="timeline-title">UI/UX Designer</h3>
-                        <div class="timeline-company">Creative Agency</div>
+                        <div class="timeline-date">08.2024 - Present</div>
+                        <h3 class="timeline-title">Junior IT Sales Solution Manager</h3>
+                        <div class="timeline-company">Vodafone GmbH</div>
                         <p class="timeline-description">
-                            Lead UI/UX designer for various client projects. Created user-centered designs and improved
-                            user
-                            experiences across multiple platforms.
+                            I manage a portfolio of 140 medium enterprise clients, generating €2.7M in annual revenue.
+                            My role focuses on driving growth, client retention, and upselling through end-to-end
+                            digital solutions. As a project lead I advise clients on digital strategies, coordinating
+                            internal teams, solution partners, and client stakeholders to execute a project
+                            successuflly. I own the full sales cycle across Vodafone's complete IT portfolio, including
+                            Connectivity, Cloud, Cybersecurity, IoT, and AI-driven solutions. With a digital-first
+                            mindset, I help clients modernize, transfom and innovate their IT.
                         </p>
                     </div>
                 </div>
@@ -188,13 +117,16 @@
                 <div class="timeline-item right">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2018 - 2020</div>
-                        <h3 class="timeline-title">Web Designer</h3>
-                        <div class="timeline-company">Design Studio</div>
+                        <div class="timeline-date">01.2018 - 10.2024</div>
+                        <h3 class="timeline-title">Tennis instructor and program coordinator</h3>
+                        <div class="timeline-company">TuS Zeppelinheim Frankfurt; Tennis Academy Wiesbaden</div>
                         <p class="timeline-description">
-                            Designed responsive websites and implemented modern UI patterns. Collaborated with
-                            development teams
-                            to ensure design integrity.
+                            As a tennis coach, I trained players of all ages and skill levels, managed youth programs
+                            and organized training camps, tournaments, and events. I focused on a creative, hands-on
+                            coaching method, designing each lesson individually with creative elements to keep players
+                            motivated and engaged. Working with a wide range of personalities helped me develop
+                            effective communication skills, allowing me to support each persons individual needs and
+                            goals with clarity and understanding.
                         </p>
                     </div>
                 </div>
@@ -203,12 +135,16 @@
                 <div class="timeline-item left">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2016 - 2018</div>
-                        <h3 class="timeline-title">Graphic Designer</h3>
-                        <div class="timeline-company">Marketing Agency</div>
+                        <div class="timeline-date">08.2021 - 02.2023</div>
+                        <h3 class="timeline-title">Valet Services</h3>
+                        <div class="timeline-company">American Food Corporation GmbH</div>
                         <p class="timeline-description">
-                            Created visual concepts for marketing campaigns. Designed logos, brochures, and social media
-                            graphics for various clients.
+                            I was responsible for managing operational logistics and coordinating food deliveries. A key
+                            part of my role involved the careful and professional handling of clients' luxury cars,
+                            requiring a high level of precision and accountability. This experience helped me develop a
+                            strong sense of responsibility and taught me how to handle important tasks and valuable
+                            assets with care and accuracy. Throughout my time in this position, I maintained a
+                            client-focused mindset to provide a professional and enjoyable experience for our clients.
                         </p>
                     </div>
                 </div>
@@ -217,49 +153,39 @@
                 <div class="timeline-item right">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2014 - 2016</div>
-                        <h3 class="timeline-title">Junior Designer</h3>
-                        <div class="timeline-company">Tech Startup</div>
+                        <div class="timeline-date">02.2016 - 02.2017</div>
+                        <h3 class="timeline-title">Press Spokesperson and Board Member of the Jusos Wiesbaden</h3>
+                        <div class="timeline-company">SPD Wiesbaden</div>
                         <p class="timeline-description">
-                            Assisted senior designers with various projects. Gained experience in UI design, branding,
-                            and
-                            digital marketing materials.
+                            In this role, I coordinated and organized initiatives at both district and regional levels,
+                            with a focus on youth engagement. I represented the organization in public discussions,
+                            panels, and committee meetings, addressing key topics such as policy development, digital
+                            infrastructure, innovation, and sustainability. I was responsible for planning and executing
+                            projects, events, and campaigns, while also managing relationships with various public
+                            stakeholders to ensure effective collaboration with us.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
 
-
-
-
         <!-- Contact Section -->
         <section id="contact" class="contact container">
             <div class="section-header">
                 <div class="badge">Contact</div>
-                <h2 class="section-title">Let's Discuss Your Project</h2>
+                <h2 class="section-title">Let's get in contact!
+                </h2>
                 <p class="section-text">
-                    Let's make something new, different and more meaningful or make thing more visual or conceptual.
                 </p>
             </div>
 
             <div class="contact-form-container">
                 <form class="contact-form">
                     <div class="form-grid">
-                        <!-- <div class="form-group">
-                            <input type="text" placeholder="Full Name" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="email" placeholder="Your Email" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="tel" placeholder="Phone Number" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" placeholder="Budget" class="form-control">
-                        </div>-->
                         <div class="form-group full-width">
-                            <textarea placeholder="Description" rows="6" class="form-control"></textarea>
+                            <textarea placeholder="Description" rows="6"
+                                class="form-control">Hello Denis,
+I really enjoyed experiencing your interactive game, it was a creative and engaging way to learn more about you. You seem like a strong fit for our team, and I believe there's real potential for you to grow with us. I'll be reaching out to you through the contacts you provided.</textarea>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">Submit Message</button>
@@ -316,37 +242,6 @@
             </div>
         </section>
 
-        <!-- Footer -->
-        <!--<footer class="footer">
-            <div class="container">
-                <div class="copyright">© 2022, All Rights Reserved</div>
-                <div class="designer">Designed by kamran</div>
-                <div class="social-links">
-                    <a href="#" class="social-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
-                        </svg>
-                    </a>
-                    <a href="#" class="social-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path
-                                d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
-                            </path>
-                        </svg>
-                    </a>
-                    <a href="#" class="social-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </footer>-->
     </div>
 
     <script>
