--- a/video1.html
+++ b/video1.html
@@ -91,15 +91,31 @@
         .next-button:hover {
             background-color: #ffea80;
         }
-        body.game-active::after {
-    display: none !important;
-    /* Hide the bottom border when game is active */
-}
 
-.game-active .logo-container {
-    display: none !important;
-    /* Hide logo when game is active */
-}
+        body.game-active::after {
+            display: none !important;
+            /* Hide the bottom border when game is active */
+        }
+
+        .game-active .logo-container {
+            display: none !important;
+            /* Hide logo when game is active */
+        }
+
+        /* Back button styling */
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            z-index: 1000;
+            color: #fed200;
+            font-size: 1.5rem;
+            text-decoration: none;
+        }
+
+        .back-button:hover {
+            color: #ffea80;
+        }
     </style>
 </head>
 
@@ -109,9 +125,10 @@
         <img src="assets/logo.png" alt="Super Denis Logo">
     </div>
 
+    <!-- Back button in top left corner -->
+    <a href="index.html?skip_intro=true" class="back-button">← Back</a>
+
     <div id="video" class="bg">
-        <img src="assets/enemy.png" />
-        <p>This is the description of the first video</p>
         <a href="#" class="next-button" onclick="startLevel2(); return false;">Go to next level</a>
     </div>
 
