--- a/video2.html
+++ b/video2.html
@@ -102,6 +102,11 @@
             /* Hide logo when game is active */
         }
 
+        /* Hide back button when game is active */
+        .game-active .back-button {
+            display: none !important;
+        }
+
         /* Back button styling */
         .back-button {
             position: absolute;
