--- a/video3.html
+++ b/video3.html
@@ -281,8 +281,8 @@
             const dialogues = [
                 { speaker: "denis", text: "Level complete... but this isn't the end, is it?" },
                 { speaker: "johann", text: "No, Denis. This is where the real journey begins." },
-                { speaker: "denis", text: "I have learned a ton and explored different passions — and somewhere along the way, I found out that this program is definitely my path." },
-                { speaker: "johann", text: "Well...you've shown more than skill, you've shown real purpose. And that drive for innovation in banking? That's exactly what we're looking for." },
+                { speaker: "denis", text: "I have learned a lot, explored different passions and somewhere along the way, I discovered that this program will be a very exciting opportunity for me." },
+                { speaker: "johann", text: "Well...you've shown more than just skill, you've shown real dedication. And that drive for innovation and digitalization? Thats exactly what we are looking for." },
                 { speaker: "denis", text: "Then... am I in?" }
             ];
 
