--- a/video3.html
+++ b/video3.html
@@ -281,7 +281,7 @@
             const dialogues = [
                 { speaker: "denis", text: "Level complete... but this isn't the end, is it?" },
                 { speaker: "johann", text: "No, Denis. This is where the real journey begins." },
-                { speaker: "denis", text: "I have learned a lot, explored different passions and somewhere along the way, I discovered that this program will be a very exciting opportunity for me." },
+                { speaker: "denis", text: "I have learned a lot, explored different passions and somewhere along the way, I discovered that this program would be a very exciting opportunity for me." },
                 { speaker: "johann", text: "Well...you've shown more than just skill, you've shown real dedication. And that drive for innovation and digitalization? Thats exactly what we are looking for." },
                 { speaker: "denis", text: "Then... am I in?" }
             ];
