--- a/resume.html
+++ b/resume.html
@@ -11,15 +11,6 @@
 
 <body>
     <div class="relative">
-        <!-- Decorative dots -->
-        <div class="dot green-dot" style="top: 60px; left: 0;"></div>
-        <div class="dot blue-dot" style="top: 100px; right: 100px;"></div>
-        <div class="dot green-dot small" style="top: 320px; left: 320px;"></div>
-        <div class="dot yellow-dot small" style="top: 380px; right: 160px;"></div>
-        <div class="dot red-dot" style="bottom: 380px; left: 40px;"></div>
-        <div class="dot green-dot" style="bottom: 160px; right: 240px;"></div>
-        <div class="dot blue-dot small" style="top: 500px; right: 200px;"></div>
-        <div class="dot green-dot extra-small" style="bottom: 700px; left: 80px;"></div>
 
         <!-- Header -->
         <header class="container">
@@ -206,7 +197,7 @@ I really enjoyed experiencing your interactive game, it was a creative and engag
                         </div>
                         <div class="contact-text">
                             <h3>Call me</h3>
-                            <p>+1 123456789</p>
+                            <p>+491 522 7771531</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -221,7 +212,7 @@ I really enjoyed experiencing your interactive game, it was a creative and engag
                         </div>
                         <div class="contact-text">
                             <h3>Email me</h3>
-                            <p>demo@design.com</p>
+                            <p>tezerdi.denis@web.de</p>
                         </div>
                     </div>
                     <div class="contact-item">
