--- a/resume.html
+++ b/resume.html
@@ -48,21 +48,20 @@
                 <h1 class="hero-title">
                     <span class="text-green">Denis Tezerdi</span>
                 </h1>
-                <p class="hero-text">
-                    I specialize in UI/UX design. I've spent the last 2 years helping businesses to solve their problems
-                    with my design for 2 years.
+                <p class="hero-text" style="font-size: 18px;">
+                    Junior IT Solution Sales Manager
                 </p>
                 <div class="hero-buttons">
-                    <button class="btn btn-primary">Contact Me</button>
-                    <button class="btn btn-outline">
-                        View Portfolio
+                    <a href="#contact" class="btn btn-primary">Contact Me</a>
+                    <a href="index.html" class="btn btn-outline">
+                        Go back to Game
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="icon">
                             <line x1="5" y1="12" x2="19" y2="12"></line>
                             <polyline points="12 5 19 12 12 19"></polyline>
                         </svg>
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="hero-image">
@@ -363,19 +362,7 @@
                         <p>tezerdi.denis@web.de</p>
                     </div>
                 </div>
-                <div class="contact-item">
-                    <div class="contact-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                            <circle cx="12" cy="10" r="3"></circle>
-                        </svg>
-                    </div>
-                    <div class="contact-text">
-                        <h3>Address</h3>
-                        <p>USA</p>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
