--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
                 </p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Contact Me</a>
-                    <a href="index.html" class="btn btn-outline">
+                    <a href="index.html?skip_intro=true#" class="btn btn-outline">
                         Go back to Game
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
