--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
         <section class="video-section container">
             <div class="section-header">
                 <div class="badge">Video Introduction</div>
-                <h2 class="section-title">Watch My Introduction</h2>
+                <h2 class="section-title">My Motivation</h2>
             </div>
 
             <div class="video-container">
@@ -240,7 +240,7 @@
 
                 <div class="form-group">
                     <textarea name="message" placeholder="Your Message" required class="form-control"
-                        rows="5">Hello Denis,More actions I really enjoyed experiencing your interactive game, it was a creative and engaging way to learn more about you. You seem like a strong fit for our team, and I believe there's real potential for you to grow with us. I'll be reaching out to you through the contacts you provided.</textarea>
+                        rows="5">Hello Denis,I really enjoyed experiencing your interactive resume, it was a creative and engaging way to learn more about you. You seem like a strong fit for our team and I believe there's real potetntial for you to grow with us. Kind regards</textarea>
                 </div>
 
                 <input type="hidden" name="redirect" value="https://web3forms.com/success">
