--- a/resume.html
+++ b/resume.html
@@ -275,7 +275,7 @@
                     border-radius: 8px;
                     background-color: rgba(255, 255, 255, 0.1);
                     /* Slightly more visible background */
-                    color: #ffffff;
+                    color: #000000;
                     font-family: 'Inter', sans-serif;
                     font-size: 16px;
                     transition: all 0.3s ease;
@@ -328,7 +328,7 @@
                 @media (prefers-color-scheme: dark) {
                     .form-control {
                         background-color: rgba(255, 255, 255, 0.05);
-                        color: #ffffff;
+                        color: #000000;
                     }
                 }
             </style>
